homelab/postgres/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: pvc-postgres
        - name: postgresconfig
          configMap:
            name: postgres-configmap
      containers:
        - name: postgres
          image: postgres:18
          args: ["-c", "config_file=/config/postgresql.conf"]
          volumeMounts:
            - name: postgresdata
              mountPath: /postgres
            - name : postgresconfig
              mountPath: /config
          resources:
            requests:
              cpu: "2000m"
              memory: "1000Mi"
          ports:
            - containerPort: 5432
              name: postgres
      priorityClassName: high-priority
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      port: 5432
  selector:
    app: postgres
